2695                        improved redistributable handling
2694 [VobSubber]            fixed error if output path contains blanks
                            removed 1GB warning
                            added CC files to the to be deleted intermediate files
2693 [AudioEncoder]         default to LWLibavAudioSource()/LSMASHAudioSource()
                            added downmix option to 5.1
                            added proper LoadPlugin calls for TimeStrech()/TimeStretchPlugin() and SoxFilter()
                            x64: remove filter/functions where the not available plugins AudioLimiter.dll or SoxFilter.dll are required
2692 [qaac]                 removed --no-delay option if LC is not used (regression of 2377). Bug #865
2691 [x265]                 fixed wrong command line (regression of 2685). Bug #863
                            changed default --crf vaue to 28
2690                        improved x64 build
     [AviSynth]             replaced Yadif by Yadifmod2
2689 [VobSubber]            improved error handling if forced subtitles are not found (regression of 2686)
                            added a warning if VOB file sizes above the specification limit are used
2688 [x264]                 fixed incorrect command line when using a x86 OS (regression of 2681)
2687 [Update]               added possibility to mark package architectures as "any"
2686 [VobSubber]            switched to VobSub Ripper
                            forced subtitles will be extracted separately if available
                            the track language will be added if multiple track files are used
2685 [x265]                 switched to avs4x26x for x64 on an x86 OS
2684 [Presets]              improved handling of preset selection/saving. Feature request #606
2683 [x264]                 fixed "force sar" option (regression of 2628). Bug #862
2682 [x264] + [x265]        added support for custom commands leading with a single hyphen (e.g. -D)